--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,8 +72,8 @@ const posts = (await getCollection("blog"))
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
           </svg>
         </a>
-        <a href="/work" class="btn-blog-card-glass group">
-          <span>View my work</span>
+        <a href="/about" class="btn-blog-card-glass group">
+          <span>More Info</span>
           <svg class="w-4 h-4 transition-transform duration-300 group-hover:translate-x-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
           </svg>
