--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -45,8 +45,9 @@ import Container from "@components/Container.astro"
               onmouseover="this.style.opacity = '0.8'"
               onmouseout="this.style.opacity = '1'"
             >
-              <svg class="size-6" style="fill: currentColor">
-                <use href="/brand.svg#brand"/>
+              <svg class="size-6" viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg" style="fill: currentColor">
+                <circle cx="500" cy="500" r="497.5" fill="black"/>
+                <text x="500" y="750" font-family="Geist, sans-serif" font-size="600" font-weight="bold" text-anchor="middle" fill="white">RF</text>
               </svg>
               {SITE.TITLE}
             </a>
